# change-detection

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_package.ipynb
docs/: getting-started.md  index.md  reference.md
docs/stylesheets/: extra.css
docs/stylesheets/material-theme-disturbance-monitor/css/: dark.css  light.css
evalscripts/: package.json  rollup.config.mjs
evalscripts/skeletons/: beta.js  iqr.js  predict.js  rmse.js  visualize_disturbed_date.js  visualize_model.js
evalscripts/tests/: beta.test.js  collections.scenes.orbits.js  predict.test.js  rmse.test.js  samples.js
evalscripts/utils/: datasources.js  dateToNumber.js  dot.js  eval_utils.js  lstsq.js  makeRegression.js  makeRegression.test.js  metrics.js  residuals.js
scripts/: 0_zarr_test.ipynb  1_fit_model.ipynb  2_vis_model.ipynb  beta.js  beta_2harm.js  predict.js  predict_single_date.js  residuals.js  test_package.ipynb  visualize_model.js
scripts/ccdc/: 1_fit_model.ipynb  beta.js  predict_single_date.js  rmse.js
scripts/evalscripts/: beta.cjs  package-lock.json  predict.cjs  predict_ccdc.cjs  rollup.config.mjs
scripts/evalscripts/skeletons/: beta.js  predict.js  predict_ccdc.js  rmse.js  visualize_model.js
scripts/evalscripts/tests/: beta.test.js  collections.scenes.orbits.js  predict.test.js  samples.js
scripts/evalscripts/utils/: dot.js  eval_utils.js  lstsq.js  makeRegression.test.js
src/disturbancemonitor/: __init__.py  backends.py  cog.py  constants.py  db.py  geo_config_handler.py  monitor_params.py  resources.py  storage.py
src/disturbancemonitor/data/: beta.cjs  forest_disturbance_classification.cjs  iqr.cjs  predict.cjs  rmse.cjs  true_color.cjs  visualize_disturbed_date.cjs  visualize_model.cjs
src/disturbancemonitor/evalscripts/: beta.cjs  rmse.cjs
src/sh-nrt/: __init__.py  backends.py  storage.py
tests/: conftest.py  test_end2end.py  test_geometry.py
